Fix  Navbar z-index

--- a/src/app/account/add-edit/add-edit.component.css
+++ b/src/app/account/add-edit/add-edit.component.css
@@ -2,7 +2,9 @@
   display: flex;
   margin-top: 100px;
   justify-content: space-around;
-
+  position: absolute;
+  z-index: -1;
+  left: 6%;
 }
 
 .Name-Lastname
