--- a/src/app/emergency-disaster/emergency-disaster.component.css
+++ b/src/app/emergency-disaster/emergency-disaster.component.css
@@ -3,6 +3,8 @@
   max-width: 1200px;
   margin: auto;
   overflow: hidden;
+  z-index: -1;
+  position: relative;
 }
 
 
