--- a/src/app/resources/resources.component.css
+++ b/src/app/resources/resources.component.css
@@ -4,6 +4,8 @@
   max-width: 1200px;
   margin: auto;
   overflow: hidden;
+  z-index: -1;
+ position: relative;
 }
 
 
