--- a/src/app/users/list/list.component.css
+++ b/src/app/users/list/list.component.css
@@ -3,6 +3,10 @@
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  z-index: -1;
+  left: 6%;
+
 }
 
 
