--- a/src/app/users/navbar/navbar.component.css
+++ b/src/app/users/navbar/navbar.component.css
@@ -8,6 +8,8 @@
   margin: auto;
   overflow: hidden;
   padding-bottom: 5px;
+  position: relative;
+  z-index: 100;
 }
 
 nav {
